Fixed news page on mobile

--- a/app/newsroom/all-news/page.module.scss
+++ b/app/newsroom/all-news/page.module.scss
@@ -2,11 +2,17 @@
 
 .content {
   padding-block: 4rem;
-  padding-inline: 10rem;
+  padding-inline: 3rem;
+
+  @media screen and (min-width: a.$mediumSize) {
+    padding-inline: 10rem;
+  }
 
   .pressMentions {
     .pressMentionCard {
-      max-width: 48%;
+      @media screen and (min-width: a.$mediumSize) {
+        max-width: 48%;
+      }
     }
   }
 }
